refactored properties reflection exceptions handling